--- a/styles/global.css
+++ b/styles/global.css
@@ -7,8 +7,7 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: Raleway, sans-serif;
-  border: 1px solid #ef0000;
+  font-family: 'Raleway', 'Arial', sans-serif;
 }
 
 h1,
